--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js && webpack-dev-server"
+    "start": "webpack --mode development",
+	"build": "webpack --env production"
   },
   "author": "Agnieszka Matyja",
   "license": "ISC",
